# blacksmithop

./: .dockerignore  .gitignore  404.html  CNAME  Dockerfile  README.md  Readme.md  config.toml  fastapi.Dockerfile  index.html  index.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: auto-pr.yml  compress-image.yml  docker-build-deploy.yml  docker-build-push.yml  docker-image.yml  gh-pages.yml  issues.yml  minfiy-js-css.yml  pre-process.yml  react-gh-pages-deploy.yml
.gitub/workflows/: push_to_docker_hub.yml
404/: index.html
app/: main.py
app/endpoints/: contact.py  github_repos.py  services.py  static_files.py  tech_stack.py
app/middleware/: logging_middleware.py
app/utils/: cache.py  rate_limit.py
assets/: index-04y9tDM1.js  index-BmaNNvbF.css  index-DkW8AEdE.css  index-DqrT-wWD.js  index-gfkZ6B7Y.js  index-v6eqjjRD.js  index-zlQOge8J.js
backend/: .gitignore  Dockerfile  requirements.txt
backend/app/: main.py
content/: projects.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json
portfolio/: style.css
projects/: index.html  index.txt
public/: 404.html  index.html  index.xml  scripts.js  sitemap.xml  styles.css
src/: App.tsx  api.ts  main.tsx  types.ts
static/: script.js  style.css
templates/: about_window.html  base.html  file-icons.html  footer.html  header.html  index.html  projects_window.html  terminal_window.html  wallpaper_window.html
utils/: github_stats.py
(+63 files in other folders)
