[tool.poetry]
name = "blacksmithop"
version = "0.1.0"
description = "Source code for my website and its API server"
authors = ["Abhinav KM <angstycoder101@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ghapi = "^1.0.6"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.4"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
